# API

./: Cargo.toml  Dockerfile  diesel.toml
migrations/2025-11-10-040658_create_users/: up.sql
migrations/2025-11-10-041726_create_email_tokens/: up.sql
migrations/2025-11-10-043024_create_refresh_tokens/: up.sql
src/: error.rs  main.rs  schema.rs
src/config/: config.rs
src/db/: connection.rs  email.rs  mod.rs  user.rs
src/errors/: app_error.rs  create_json_error_str.rs  define_app_error.rs  mod.rs
src/errors/auth/: email.rs  hashing.rs  jwt.rs  mod.rs
src/errors/db/: diesel_error.rs  mod.rs  user.rs
src/handlers/: mod.rs  ping.rs  register.rs
src/models/: email.rs  email_confirmation.rs  mod.rs  user.rs  users.rs
src/models/dto/requests/: register.rs
src/posts/: confirm_email.rs  login.rs  logout.rs  mod.rs  registry.rs
src/routes/: mod.rs
src/routes/get/: confirm_email.rs  mod.rs
src/routes/post/: confirm_email.rs  login.rs  logout.rs  mod.rs  ping.rs  registry.rs
src/services/: email.rs  hashing.rs  jwt.rs  mod.rs  regex.rs  validation.rs
src/structs/: app_state.rs  claims.rs  confirm_query.rs  email_send.rs  login_input.rs  login_output.rs  logout_input.rs  mod.rs  registry_input.rs
src/templates/: email_template.html
src/utils/: create_json_str.rs  helpers.rs  mod.rs
